<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#99425EFA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/quiz_app"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cdView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="40dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" >

        <LinearLayout
            android:id="@+id/linearLayoutCdView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/cdview"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:layout_marginTop="30dp"
                android:textSize="28sp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/please_enter_your_name"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="15sp"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/name"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:hint="@string/enter_your_name"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_medium"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:text="@string/start"
                android:background="#99425EFA"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_medium"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>